--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -47,6 +47,7 @@ background-size: cover;
     max-height: 500px;
     margin-top: 0px;
     max-width: 2000px;
+    position: relative;
  
 }
 
@@ -114,11 +115,25 @@ p {
 
 #map {
   height: 500px;
-  position: relative
+  position: relative;
 
 
 }
 
+#buttons {
+ position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
 #addressToAddress {
 
    max-height: 500px;
