added in styling to the modal

--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -45,20 +45,23 @@
 		<div class="modal-content">
 		<span id = "close_modal">x</span>
 		<br>
-		<h1>Hello and welcome to Strategic Bus Solutions Worldwide</h1>
+		<div>
+		<h2 id="info-title">Hello and welcome to Strategic Bus Solutions Worldwide</h2>
 		<div id="site-description">
 		<span id = "title">Below you will find two main options:</span>
-		<ul>
+                <br>
+		<ul id="info-list">
 			<li>Journey Planner</li><br>
 			<div class="functions">For this option you maybe enter your desired start and stop destinations and click go.
 			Alternatively you may select "Use Current Location" to use your current location as your start point
 			or select start and end point by clicking on the map itself. Once you have finished and clicked go, 
 			scroll down to find a breakdown of you journey as well as the price of you journey</div>
-
+			<br>
 			<li>Search By Route</li><br>
 			<div class="functions">Use this option if you know the exact bus number you want to use as well as the number or general address
 			of the start and end stop</div>
 		</ul>
+		</div>
 		</div>
 		</div>
 	</div>
