--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -300,8 +300,9 @@ padding: 0px;
    margin-right: 100px;
    margin-top: 100px;
    padding: 10px;
-   max-width: 500px
+   max-width: 500px;
    z-index:999;
+   max-width: 500px
 }
 
 #close_modal {
@@ -315,6 +316,15 @@ padding: 0px;
    margin-left 20px;
 }
 
-#title {
+#info-title {
+   float: none;
+}
 
+#info-list {
+   list-style-type: circle;
+   color: black;
+   margin-left: 10px;
+   font-weight: 400;
+   line-height: 20px;
+   margin-top: 10px;
 }
