--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -72,7 +72,7 @@ ul {
     line-height: 12px;
     margin-top: -50px;
     font-weight: bold;
-    color: #553D67;
+    color: #B39BC8;
 }
 img {
     width: 100px;
